--- a/index.html
+++ b/index.html
@@ -3,29 +3,33 @@
   <head>
     <meta charset='UTF-8'/>
     <link rel='stylesheet' href='style.css'/>
-    <title>La Vie en Rose</title>
+    <title>LIFE</title>
   </head>
   <body>
     <div class='page'>
       <div class='section title'>
-        <h1>La Vie En Rose</h1>
+        <h1>Life</h1>
       </div>
       <div class='section header'>
-        <a class='section header-item link-item'
-        href='http://localhost:8000/Web%20Design%20Principles/index.html'>
-          Home
-        </a>
         <a class='section header-item mid link-item'
           href='http://localhost:8000/Web%20Design%20Principles/quotes.html'>
-          Read
+          <p>Quotes</p>
         </a>
-        <a class='section header-item link-item'
+        <a class='section header-item mid link-item'
           href='http://localhost:8000/Web%20Design%20Principles/art.html'>
-          Learn
+          <p>Art</p>
         </a>
         <a class='section header-item link-item'
-          href=http://localhost:8000/Web%20Design%20Principles/about.html>
-          About
+          href='http://localhost:8000/Web%20Design%20Principles/livelist.html'>
+          <p>Live List</p>
+        </a>
+        <a class='section header-item link-item'
+          href='http://localhost:8000/Web%20Design%20Principles/smiley.html'>
+          <p>&#9786;</p>
+        </a>
+        <a class='section header-item link-item'
+        href='http://localhost:8000/Web%20Design%20Principles/index.html'>
+          <p>Random</p>
         </a>
       </div>
       <div class='images'>
@@ -39,7 +43,11 @@
         <img class='main-img' src='images/main9.jpeg'/>
         <img class='main-img' src='images/main10.jpeg'/>
       </div>
-    </div>
 
+      <a class='section footer link-item'
+        href='https://github.com/taliaebird/creative'>
+        <p>GitHub</p>
+      </a>
+  </div>
   </body>
 </html>
