--- a/livelist.html
+++ b/livelist.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
   <head>
     <metacharset='UTF-8'/>
+    <title>Coming Soon!</title>
     <link rel='stylesheet' href='style.css'/>
-    <title>Art</title>
   </head>
   <body>
     <div class='page'>
@@ -20,7 +20,7 @@
           <p>Art</p>
         </a>
         <a class='section header-item link-item'
-          href='http://localhost:8000/Web%20Design%20Principles/livelist.html'>
+          href='http://localhost:8000/Web%20Design%20Principles/about.html'>
           <p>Live List</p>
         </a>
         <a class='section header-item link-item'
@@ -32,32 +32,11 @@
           <p>Random</p>
         </a>
       </div>
-
-      <div class='images'>
-        <img class='main-img' src='images/art/img1.jpeg'/>
-        <img class='main-img' src='images/art/img2.jpeg'/>
-        <img class='main-img' src='images/art/img3.jpeg'/>
-        <img class='main-img' src='images/art/img4.jpeg'/>
-        <img class='main-img' src='images/art/img5.jpeg'/>
-        <img class='main-img' src='images/art/img8.jpeg'/>
-        <img class='main-img' src='images/art/img7.jpeg'/>
-        <img class='main-img' src='images/art/img9.jpeg'/>
-        <img class='main-img' src='images/art/img6.jpeg'/>
-      </div>
-
-    <div class='section subsection-footer'>
-      <div class='section footer-quote'>
-        <p>"I would like to paint the way a bird sings." - <em>Claude Monet</em></p>
-      </div>
+      <h1>Coming Soon!</h1>
+      <a class='section footer link-item'
+        href='https://github.com/taliaebird/creative'>
+        <p>GitHub</p>
+      </a>
     </div>
-
-    <a class='section footer link-item'
-      href='https://github.com/taliaebird/creative'>
-      <p>GitHub</p>
-    </a>
-
-  </div>
-
-
   </body>
 </html>
