adding creative projects

--- a/livelist.html
+++ b/livelist.html
@@ -12,23 +12,23 @@
       </div>
       <div class='section header'>
         <a class='section header-item mid link-item'
-          href='http://localhost:8000/Web%20Design%20Principles/quotes.html'>
+          href='http://taliabird.com/quotes.html'>
           <p>Quotes</p>
         </a>
         <a class='section header-item mid link-item'
-          href='http://localhost:8000/Web%20Design%20Principles/art.html'>
+          href='http://taliabird.com/art.html'>
           <p>Art</p>
         </a>
         <a class='section header-item link-item'
-          href='http://localhost:8000/Web%20Design%20Principles/about.html'>
+          href='http://taliabird.com/livelist.html'>
           <p>Live List</p>
         </a>
         <a class='section header-item link-item'
-          href='http://localhost:8000/Web%20Design%20Principles/smiley.html'>
+          href='http://taliabird.com/smiley.html'>
           <p>&#9786;</p>
         </a>
         <a class='section header-item link-item'
-        href='http://localhost:8000/Web%20Design%20Principles/index.html'>
+        href='http://taliabird.com/index.html'>
           <p>Random</p>
         </a>
       </div>
